# DeskFairy

./: .gitignore  CMakeLists.txt  prepare.sh  readme.md  release.sh
DeskFairy/src/: Defines.cpp  Defines.h  FileLoader.cpp  FileLoader.h  ItemManager.cpp  ItemManager.h  Live2DWidget.cpp  Live2DWidget.h  Model.h  MouseTracker.cpp  ScreenGrabber.cpp  Settings.cpp  Settings.h  TextureLoader.cpp  TransparentWindow.cpp  main.cpp
